--- a/cypress/package.json
+++ b/cypress/package.json
@@ -14,5 +14,8 @@
     "browserify": "^17.0.0",
     "cypress": "^13.14.2",
     "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
